/*
 * To change this license header, choose License Headers in Project Properties.
 * To change this template file, choose Tools | Templates
 * and open the template in the editor.
 */
package com.lordmat.blackjacksimulator.statergy;

/**
 *
 * @author mat
 */
public interface CardObserver {
    void updateCard(int cardValue);   
}
