package com.lordmat.blackjacksimulator.statergy;

/**
 *
 * @author mat
 */
public enum Move {
    STAND, HIT
}
